--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Shiyam Robert's portfolio showcasing web development projects and skills in HTML, CSS, JavaScript, and React. Explore my works and get in touch."
+    />
     <title>Shiyam Robert - Portfolio</title>
   </head>
   <body>
